--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
         "symfony/assetic-bundle": "^2.8",
         "twbs/bootstrap" : "3.*",
         "components/jquery": "dev-master",
-        "oyejorge/less.php": "dev-master"
+        "oyejorge/less.php": "dev-master",
+        "bmatzner/fontawesome-bundle": "~4.7"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
