--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -11,7 +11,7 @@ parameters:
 
 framework:
     #esi:             ~
-    translator:      { fallbacks: ["%locale%"] }
+    translator: { fallbacks: [en] }
     secret:          "%secret%"
     router:
         resource: "%kernel.root_dir%/config/routing.yml"
@@ -78,6 +78,3 @@ fos_user:
     registration:
         form:
             type: UserBundle\Form\UserRegistrationType
-    login:
-        form:
-            type: UserBundle\Form\LoginFormType
