--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,10 +1,21 @@
 app:
     resource: "@AppBundle/Controller/"
     type:     annotation
+user:
+    resource: "@UserBundle/Controller/UserController.php"
+    type:     annotation
+    prefix: /user
 
+#FOSUSER BUNDLE ROUTING
 fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/all.xml"
-
 fos_user_group:
     resource: "@FOSUserBundle/Resources/config/routing/group.xml"
     prefix: /group
+
+#SGDATA TABLE BUNDLE ROUTING
+sg_datatables_bundle:
+    resource: "@SgDatatablesBundle/Controller/"
+    type:     annotation
+fos_js_routing:
+    resource: "@FOSJsRoutingBundle/Resources/config/routing/routing.xml"
