--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
         "twbs/bootstrap" : "3.*",
         "components/jquery": "dev-master",
         "oyejorge/less.php": "dev-master",
-        "bmatzner/fontawesome-bundle": "~4.7"
+        "bmatzner/fontawesome-bundle": "~4.7",
+        "friendsofsymfony/jsrouting-bundle": "^1.6"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
