FEAT: Implementation de la confirmation de crÃation de compte par envoi de mail. Configuration de switmailer, mise en place de la gÃnÃration de mot de passe et de l'url de confirmation.

--- a/src/AppBundle/Resources/config/services.yml
+++ b/src/AppBundle/Resources/config/services.yml
@@ -1,8 +1,3 @@
-# --- IMPORTS ----
-imports:
-    - { resource: "@AppBundle/Resources/config/manager.yml" }
-    - { resource: "@AppBundle/Resources/config/handler.yml" }
-
 services:
     app.form.type.user:
         class: AppBundle\Form\UserType
@@ -11,6 +6,10 @@ services:
 
     app.form.type.user_registration:
         class: UserBundle\Form\UserRegistrationType
+
+    app.mailer:
+        class: AppBundle\Services\Mailer
+        arguments: ['@swiftmailer.mailer', '@templating.engine.twig']
 
 #    app.form.type.user_profile:
 #        class: AppBundle\Form\UserProfileType
