--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -67,7 +67,9 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
-
+#    spool:
+#        type: file
+#        path: '%path%'
 fos_user:
     db_driver: orm # other valid values are 'mongodb' and 'couchdb'
     firewall_name: main
