--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -1,5 +1,7 @@
-# Learn more about services, parameters and containers at
-# http://symfony.com/doc/current/service_container.html
+# --- IMPORTS ----
+imports:
+    - { resource: "@AppBundle/Resources/config/services.yml" }
+
 parameters:
 #    parameter_name: value
 
