--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
         "components/jquery": "dev-master",
         "oyejorge/less.php": "dev-master",
         "bmatzner/fontawesome-bundle": "~4.7",
-        "friendsofsymfony/jsrouting-bundle": "^1.6"
+        "friendsofsymfony/jsrouting-bundle": "^1.6",
+        "twig/extensions": "^1.5"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
