FEAT: Finalisation du panier et persistence de la commande. Il manque la generation de la facture dans le datatable de la facture.

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -37,6 +37,8 @@ framework:
 twig:
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
+    globals:
+        tva: 19.5
 
 # Doctrine Configuration
 doctrine:
