FEAT: Ajour de la generation de pdf Desormais, a partir de la liste des factures, il suffit de choisir la facture a Ã©diter et aussitÃt elle est generee

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -84,3 +84,4 @@ fos_user:
     registration:
         form:
             type: UserBundle\Form\UserRegistrationType
+#Bundle de generation de pdf et d'inmage
