--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
         "oyejorge/less.php": "dev-master",
         "bmatzner/fontawesome-bundle": "~4.7",
         "friendsofsymfony/jsrouting-bundle": "^1.6",
-        "twig/extensions": "^1.5"
+        "twig/extensions": "^1.5",
+        "dompdf/dompdf": "^0.8.1"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
