--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -68,10 +68,10 @@ swiftmailer:
     host:      "%mailer_host%"
     username:  "%mailer_user%"
     password:  "%mailer_password%"
-    spool:     { type: memory }
-#    spool:
-#        type: file
-#        path: '%path%'
+#    spool:     { type: memory }
+    spool:
+        type: file
+        path: '%kernel.root_dir%/../data/spool'
 fos_user:
     db_driver: orm # other valid values are 'mongodb' and 'couchdb'
     firewall_name: main
