FEAT: AJout du client lors du passage de la commande Apres le panier, le client saisi ses coordonnees avant que la commande ne soit passee

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -4,6 +4,7 @@ security:
 
     role_hierarchy:
         ROLE_USER: ROLE_USER
+        ROLE_CLIENT: ROLE_USER
         ROLE_STORE_KEEPER: ROLE_USER
         ROLE_ACCOUNTANT: ROLE_ACCOUNTANT
         ROLE_ADMIN: [ROLE_STORE_KEEPER, ROLE_ACCOUNTANT]
