FIX: Retrait du role utilisateur client lors du passage de la commande. En effet, l'utilisateur est par dÃ©faut un client donc, n'a pas le droit de se choisir un role.

--- a/src/AppBundle/Resources/config/services.yml
+++ b/src/AppBundle/Resources/config/services.yml
@@ -1,6 +1,6 @@
 services:
-    app.form.type.user:
-        class: AppBundle\Form\UserType
+    app.form.type.user_client:
+        class: AppBundle\Form\UserClientType
         tags:
             - { name: form.type }
 
